# gitflux

./: .gitignore  Cargo.toml  Makefile  README.md  makefile
.github/workflows/: develop-build.yml
.trunk/: trunk.yaml
src/: commit_manager.rs  generic_types.rs  main.rs  repo_actions.rs  tag_manager.rs  types.rs
