[package]
name = "testproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
git2 = "0.20.0"
log = "0.4.25"
